<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TripWeather</string>
    <string name="title_activity_start">Plan your trip!</string>

    <string name="input_from">From%1$s</string>
    <string name="input_to">To%1$s</string>
    <string name="input_time">When?</string>
    <string name="input_how">How?</string>
    <string name="question_mark">\?</string>
    <string name="input_from_example">e.g. from Home</string>
    <string name="input_to_example">e.g. to London</string>
    <string name="input_time_example">e.g. starting now</string>
    <string name="input_how_example">e.g. by car</string>

    <string name="travel_mode_driving">Driving</string>
    <string name="travel_mode_walking">Walking</string>
    <string name="travel_mode_bicycling">Bicycling</string>

    <string name="tab_map">Map</string>
    <string name="tab_temperature">Temperature</string>
    <string name="tab_precipitation">Precipitation</string>

    <string name="loading_title">Crunching data</string>
    <string name="loading_message">Getting the latest weather data, please wait …</string>

    <string name="error_location_title">Unable to find location</string>
    <string name="error_location_nonexistent">We were unable to find \"%1$s\". Please try a different location.</string>
    <string name="error_location_internal">There was an unexpected error while looking for \"%1$s\". Please try again later.</string>
    <string name="error_location_user">We were unable to determine your location. Is GPS turned off?</string>

    <string name="error_route_title">Unable to find route</string>
    <string name="error_route_nonexistent">There does not seem to be a route between these two points.</string>
    <string name="error_route_internal">There was an unexpected error while loading the route. Please try again later.</string>

    <string name="error_weather_title">Forecast not available</string>
    <string name="error_weather_data_too_distant">Unfortunately there are not yet any forecasts available for the %1$s.</string>

    <string name="error_network_title">No internet connection</string>
    <string name="error_network_msg">We were unable to fetch any forecasts due to a missing internet connection.</string>

    <string name="error_unknown_title">Something went wrong</string>
    <string name="error_unknown_msg">Sorry, this wasn\'t supposed to happen. Please try again later.</string>

    <plurals name="warnings">
        <item quantity="one">Warning!</item>
        <item quantity="other">Warnings!</item>
    </plurals>

    <string name="about">About</string>
    <string name="about_version">version</string>
    <string name="about_authors">authors</string>
    <string name="about_authors_title">Authors</string>
    <string name="about_authors_msg">
        This app was developed as part of the Android Challenge: one app every month for one year
        (think of it as a New Year\'s resolution). TripWeather was our project for February.&lt;br/&gt;
        &lt;br/&gt;
        If you want to know more be sure to check out our &lt;a href=&quot;http://faudroids.org&quot;&gt;website&lt;/a&gt;.
        This app is &lt;b&gt;open source&lt;/b&gt; and you can find everything on &lt;a href=&quot;https://github.com/FauDroids/TripWeather&quot;&gt;GitHub&lt;/a&gt;.&lt;br/&gt;
        &lt;br/&gt;
        We would love to hear from you! Send us an &lt;a href=&quot;mailto:ideas@faudroids.org&quot;&gt;email&lt;/a&gt; and let us know what you think!&lt;br/&gt;
        &lt;br/&gt;
        The developers are&lt;br/&gt;
        &lt;br/&gt;
        Philipp Eichhorn&lt;br/&gt;
        Simon Hofmann&lt;br/&gt;
        &lt;br/&gt;
        Happy coding!
    </string>
    <string name="about_credits">credits</string>
    <string name="about_credits_title">Credits</string>
    <string name="about_credits_msg">
        This app is being powered by a number of small and large &lt;b&gt;open source projects&lt;/b&gt;
        which all together have made this project happen. We couldn\'t have done this with out them.
        You guys are awesome, keep on rocking!&lt;br&gt;
        &lt;br&gt;
        The libraries in use are:&lt;br&gt;
        &lt;br&gt;
        &lt;a href=&quot;https://square.github.io/retrofit/&quot;&gt;Retrofit&lt;/a&gt; by Square, Inc.&lt;br&gt;
        &lt;a href=&quot;https://github.com/JakeWharton/timber&quot;&gt;Timber&lt;/a&gt; by Jake Wharton&lt;br&gt;
        &lt;a href=&quot;https://github.com/PhilJay/MPAndroidChart&quot;&gt;MPAndroidChart&lt;/a&gt; by Philipp Jahoda&lt;br&gt;
        &lt;a href=&quot;https://github.com/ReactiveX/RxJava/wiki&quot;&gt;RxJava&lt;/a&gt; by Netflix, Inc.&lt;br&gt;
        &lt;a href=&quot;https://github.com/CiTuX/datetimepicker&quot;&gt;DateTimePicker&lt;/a&gt; by Paul St&#246;hr&lt;br&gt;
        &lt;a href=&quot;http://www.ocpsoft.org/prettytime/&quot;&gt;prettytime&lt;/a&gt; by ocpsoft&lt;br&gt;
        &lt;a href=&quot;https://github.com/jpardogo/PagerSlidingTabStrip&quot;&gt;PagerSlidingTabStrip&lt;/a&gt; by Andreas Stuetz&lt;br&gt;
        &lt;a href=&quot;https://github.com/roboguice/roboguice&quot;&gt;RoboGuice&lt;/a&gt;&lt;br&gt;
        &lt;a href=&quot;https://developers.google.com/maps/documentation/android/&quot;&gt;Google Maps Android API v2&lt;/a&gt; by Google Inc.&lt;br&gt;
        &lt;a href=&quot;https://developer.android.com/google/play-services/index.html&quot;&gt;Google Play Services&lt;/a&gt; by Google Inc.&lt;br&gt;
        &lt;a href=&quot;https://github.com/google/material-design-icons/&quot;&gt;Material Design Icons&lt;/a&gt; by Google Inc.&lt;br&gt;
        &lt;a href=&quot;https://source.android.com/&quot;&gt;Android Open Source Project&lt;/a&gt; by Google Inc. and the Open Handset Alliance&lt;br&gt;
        &lt;br&gt;
        Besides those we are tapping into the following sources for constructing route and forecast data:&lt;br&gt;
        &lt;br&gt;
        &lt;a href=&quot;https://developers.google.com/maps/documentation/directions/&quot;&gt;Google Directions API&lt;/a&gt; by Google Inc.&lt;br&gt;
        &lt;a href=&quot;https://developers.google.com/places/documentation/&quot;&gt;Google Places API&lt;/a&gt; by Google Inc.&lt;br&gt;
        &lt;a href=&quot;https://developers.google.com/maps/documentation/geocoding/&quot;&gt;Google Geocoding API&lt;/a&gt; by Google Inc.&lt;br&gt;
        &lt;a href=&quot;http://openweathermap.org/api&quot;&gt;openweathermap.org&lt;/a&gt; by OpenWeatherMap&lt;br&gt;
        &lt;br&gt;
        Thanks everyone!
    </string>
    <string name="about_feedback">feedback</string>
    <string name="about_feedback_title">Feedback</string>
    <string name="about_feedback_msg">
        We would love to hear from you!
        &lt;br&gt;
        &lt;br&gt;
        TripWeather is still in a very early stage and we need your help to determine if this app has helped you plan
        your trip or what we could do to make your life easier.
        &lt;br&gt;
        &lt;br&gt;
        So please consider heading over to the PlayStore and let uns know what you think!
    </string>
    <string name="about_feedback_ok">Rate TripWeather</string>
    <string name="about_feedback_cancel">No thanks</string>

    <string name="places_api_auth_error">REQUEST_DENIED</string>
    <string name="places_base_url">https://maps.googleapis.com/maps/api/place</string>
    <string name="places_request_type">/autocomplete</string>
    <string name="places_return_format">/json</string>

    <string name="google_directions_api_base_url">https://maps.googleapis.com/maps/api/directions</string>
    <string name="google_geocoding_api_base_url">https://maps.googleapis.com/maps/api/geocode</string>
    <string name="google_places_api_base_url">https://maps.googleapis.com/maps/api/place</string>
    <string name="open_weather_base_url">http://api.openweathermap.org/data/2.5</string>

    <string name="graph_temp_legend">Temperature</string>
    <string name="graph_rain_legend">Rain (measured over %1$d hours)</string>
    <string name="graph_snow_legend">Snow (measured over %1$d hours)</string>
    <string name="graph_show_rain">Show rain</string>
    <string name="graph_show_snow">Show snow</string>
    <string name="graph_no_rain">No rain predicted!</string>
    <string name="graph_no_snow">No snow predicted!</string>

    <string name="input_choose_origin">Choose start</string>
    <string name="input_choose_destination">Choose destination</string>
    <string name="input_choose_location">Choose location</string>
    <string name="input_choose_from_map">Choose from map</string>
    <string name="input_choose_time">Choose starting time</string>
    <string name="input_choose_how">Choose travel mode</string>
    <string name="input_your_location">Your location</string>
    <string name="input_selected_from_map">Location on map</string>
    <string name="input_map_select">Select</string>
    <string name="input_map_cancel">Cancel</string>
    <string name="input_map_hint">Use zoom &amp; pan to center location</string>
    <string name="input_now">Now</string>
    <string name="input_tomorrow">Tomorrow</string>

    <string name="menu_done">Done</string>

</resources>
