<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/DefaultCard"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/driving"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="?android:attr/selectableItemBackground"
            android:padding="@dimen/padding_default"
            >

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_directions_car_grey600_36dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/travel_mode_driving"
                android:layout_gravity="center"
                android:paddingLeft="@dimen/padding_default"
                style="@style/DefaultTextStyleBlack"
                />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_height"
            android:background="@color/gray_light"
            android:layout_marginLeft="@dimen/padding_default"
            android:layout_marginRight="@dimen/padding_default"
            />


        <LinearLayout
            android:id="@+id/walking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="?android:attr/selectableItemBackground"
            android:padding="@dimen/padding_default"
            >

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_directions_walk_grey600_36dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/travel_mode_walking"
                android:layout_gravity="center"
                android:paddingLeft="@dimen/padding_default"
                style="@style/DefaultTextStyleBlack"
                />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_height"
            android:background="@color/gray_light"
            android:layout_marginLeft="@dimen/padding_default"
            android:layout_marginRight="@dimen/padding_default"
            />


        <LinearLayout
            android:id="@+id/bicycling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="?android:attr/selectableItemBackground"
            android:padding="@dimen/padding_default"
            >

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_directions_bike_grey600_36dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/travel_mode_bicycling"
                android:layout_gravity="center"
                android:paddingLeft="@dimen/padding_default"
                style="@style/DefaultTextStyleBlack"
                />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>